--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
             color: #fc4349;
         }
     </style>
-    <script src="node_modules/react/umd/react.production.min.js"></script>
-    <script src="node_modules/react-dom/umd/react-dom.production.min.js"></script>
-    <script src="node_modules/redux/dist/redux.min.js"></script>
-    <script src="node_modules/redux-thunk/dist/redux-thunk.min.js"></script>
-    <script src="node_modules/lodash/lodash.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/react/umd/react.production.min.js"></script>
+    <script src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
+    <script src="/node_modules/redux/dist/redux.min.js"></script>
+    <script src="/node_modules/redux-thunk/dist/redux-thunk.min.js"></script>
+    <script src="/node_modules/lodash/lodash.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!--<script src="/client/assets/js/jquery-3.3.1.min.js"></script>-->
 
 
     <div id="main"></div>
-    <script src="./static/main.min.js"></script>
+    <script src="/static/main.min.js"></script>
 
 
 
