--- a/index.html
+++ b/index.html
@@ -290,6 +290,10 @@
                 $("#popup-r").slideToggle();
             });
 
+            $("#_hide-r").click(function () {
+                $("#popup-r").slideToggle();
+            });
+
 
             $("#pop-right-msg").click(function () {
                 $("#popup-msg").slideToggle();
