--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    
+
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>React App</title> 
+    <title>React App</title>
 
     <!--Template-->
     <link href="/client/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -87,6 +87,117 @@
             font-size: 12px !important;
             font-weight: bold;
             color: #fc4349;
+        }
+
+        span.msg1 {
+            background: #68bd53;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 40px;
+            left: 34px;
+        }
+
+        span.msg2 {
+            background: #ffc107;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 40px;
+            left: 34px;
+        }
+
+        span.msg3 {
+            background: #dc3545;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 40px;
+            left: 34px;
+        }
+
+        span.msg4 {
+            background: #dc3545;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 40px;
+            left: 34px;
+        }
+
+        span.msg5 {
+            background: #A9A9A9;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 40px;
+            left: 34px;
+        }
+
+        .st1 {
+            background: #68bd53;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 32px;
+            right: 34px;
+        }
+
+
+        .st2 {
+            background: #ffc107;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 32px;
+            right: 34px;
+        }
+
+        .st3 {
+            background: #dc3545;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 32px;
+            right: 34px;
+        }
+
+        .st4 {
+            background: #dc3545;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 32px;
+            right: 34px;
+        }
+
+        .st5 {
+            background: #A9A9A9;
+            display: inline-block;
+            width: 11px;
+            height: 11px;
+            border-radius: 50px;
+            position: absolute;
+            top: 32px;
+            right: 34px;
         }
     </style>
     <script src="/node_modules/react/umd/react.production.min.js"></script>
