--- a/index.html
+++ b/index.html
@@ -225,35 +225,80 @@
             margin-top: 0px !important;
         }
 
-        .__circular2 {
-                display: inline-block;
-                width: 65px !important;
-                height: 65px;
-                border-radius: 50% !important;
-                position: relative;
-                overflow: hidden;
-                margin: -10px 5px 0px -14px !important;
-            }
+        .__circular1 {
+            display: inline-block;
+            /* width: auto; */
+            height: 90px;
+            border-radius: 50%;
+            position: relative;
+            overflow: hidden;
+            margin: 0px 0px !important;
+        }
 
-            .__circular3 {
+        .__circular2 {
+            display: inline-block;
+            width: 65px !important;
+            height: 65px;
+            border-radius: 50% !important;
+            position: relative;
+            overflow: hidden;
+            margin: -10px 5px 0px -14px !important;
+        }
+
+        .__circular3 {
+            display: inline-block;
+            width: 50px !important;
+            height: 50px;
+            border-radius: 50% !important;
+            position: relative;
+            overflow: hidden;
+            margin: 0px 0px !important;
+        }
+
+        .__circular4 {
+            display: inline-block;
+            width: 50px !important;
+            height: 50px;
+            border-radius: 50% !important;
+            position: relative;
+            overflow: hidden;
+            margin: -5px -10px !important;
+        }
+
+        @media (min-width: 992px) and (max-width: 1200px) {
+            .__circular1 {
                 display: inline-block;
-                width: 50px !important;
-                height: 50px;
-                border-radius: 50% !important;
+                /* width: auto; */
+                height: 65px;
+                border-radius: 50%;
                 position: relative;
                 overflow: hidden;
                 margin: 0px 0px !important;
             }
-
-            .__circular4 {
+        }
+        @media (min-width: 1205px) and (max-width: 1360px) {
+            .__circular1 {
                 display: inline-block;
-                width: 50px !important;
-                height: 50px;
-                border-radius: 50% !important;
+                /* width: auto; */
+                height: 110px;
+                border-radius: 50%;
                 position: relative;
                 overflow: hidden;
-                margin: -5px -10px !important;
+                margin: 0px 0px !important;
             }
+        }
+
+        @media (min-width: 605px) and (max-width: 768px) {
+            .__circular1 {
+                display: inline-block;
+                /* width: auto; */
+                height: 110px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: 0px 0px !important;
+            }
+        }
 
         @media (min-width: 320px) and (max-width: 600px) {
             .__circular {
@@ -264,6 +309,16 @@
                 position: relative;
                 overflow: hidden;
                 margin: -10px 5px !important;
+            }
+
+            .__circular1 {
+                display: inline-block;
+                /* width: auto; */
+                height: 115px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: 0px 0px !important;
             }
 
             .__circular2 {
