--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@
 
                 margin: 30,
                 nav: true,
-                loop: true,
+                loop: false,
+                singleItem:true,
                 navText: ["<div class='nav-btn prev-btn'>Pre</div>", "<div class='nav-btn next-btn'>Next</div>"],
                 dots: true,
                 responsive: {
