--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <script>
         $(document).ready(function () {
             $('.count').prop('disabled', true);
-            $(document).on('click', '.plus', function () {
+            /*$(document).on('click', '.plus', function () {
                 $('.count').val(parseInt($('.count').val()) + 1);
             });
             $(document).on('click', '.minus', function () {
@@ -400,7 +400,7 @@
                 if ($('.count').val() == 0) {
                     $('.count').val(1);
                 }
-            });
+            });*/
         });
     </script>
     <!-- Bootstrap Core JavaScript -->
