--- a/zoom.html
+++ b/zoom.html
@@ -5,11 +5,23 @@
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link type="text/css" rel="stylesheet" href="node_modules/@zoomus/websdk/dist/css/bootstrap.css" />
-    <link type="text/css" rel="stylesheet" href="node_modules/@zoomus/websdk/dist/css/react-select.css" />
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>React App</title>
+
+
+    <!--Template-->
+    <link rel="stylesheet" href="/client/assets/css/javascript-calendar.css" type="text/css">
+    <link href="/client/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/client/assets/images/fav-icon.png" rel="icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="/client/assets/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/client/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/client/assets/css/simpleLightbox.min.css">
+    <link rel="stylesheet" href="/client/assets/css/easy-responsive-tabs.css">
+    <!--Template-->
 
 </head>
 
