--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
     <script>
         $(document).ready(function () {
-            $('.count').prop('disabled', true);
+            //$('.count').prop('disabled', true);
             /*$(document).on('click', '.plus', function () {
                 $('.count').val(parseInt($('.count').val()) + 1);
             });
