--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
 
 
     <script>
-        $("#msg-bar").click(function () {
+        /*$("#msg-bar").click(function () {
             $(".msg-area").toggle(500);
-        });
+        });*/
     </script>
 
     <script>
