--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
             margin: 0px 0px !important;
         }
 
+
+
         .__circular4 {
             display: inline-block;
             width: 50px !important;
@@ -264,6 +266,15 @@
             position: relative;
             overflow: hidden;
             margin: -5px -10px !important;
+        }
+
+        .__circular5 {
+            display: inline-block;
+            width: 130px !important;
+            height: 130px;
+            border-radius: 50% !important;
+            position: relative;
+            overflow: hidden;
         }
 
         @media (min-width: 992px) and (max-width: 1200px) {
