--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
             $("#pop-left").click(function () {
                 $("#popup-l").slideToggle();
             });
+            
             $("#hide-l").click(function () {
                 $("#popup-l").slideToggle();
             });
@@ -466,8 +467,8 @@
     </script>
     <script>
         $(document).ready(function () {
-            $(".icon-arrow").click(function () {
-                $(".popup").slideToggle();
+            $("#pop-right-msg").click(function () {
+                $("#popup-r").slideToggle();
             });
         });
 
