--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 <body>
     <style>
+        .networkStyling {
+            font-family: "Times New Roman", Times, serif !important;
+        }
+
         .sdk-select {
             height: 34px;
             border-radius: 4px;
