--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
 <body>
     <style>
+        .textArea {
+            color: #000;
+            font-size: 15px;
+            border: 2px solid #000 !important;
+            border-radius: 6px !important;
+        }
+
         .networkStyling {
             font-family: "Times New Roman", Times, serif !important;
         }
