--- a/index.html
+++ b/index.html
@@ -526,6 +526,50 @@
 
                 },
             });
+            $("#v-record").owlCarousel({
+
+                margin: 30,
+                nav: true,
+                loop: false,
+                singleItem: true,
+                navText: ["<div class='nav-btn prev-btn'>Pre</div>", "<div class='nav-btn next-btn'>Next</div>"],
+                dots: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 3
+                    },
+                    1000: {
+                        items: 4
+                    },
+
+                },
+            });
+
+            $("#v-audi").owlCarousel({
+
+                margin: 30,
+                nav: true,
+                loop: false,
+                singleItem: true,
+                navText: ["<div class='nav-btn prev-btn'>Pre</div>", "<div class='nav-btn next-btn'>Next</div>"],
+                dots: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 3
+                    },
+                    1000: {
+                        items: 4
+                    },
+
+                },
+            });
+
 
 
         });
