--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
             border-radius: 6px !important;
         }
 
+        img.img-responsive.v-frame {
+            height: 85% !important;
+        }
+
+        .swal-button--confirm {
+            background: #fc4349;
+        }
+
+        .__circular6 {
+            width: 40px !important;
+            height: 40px;
+            border-radius: 50% !important;
+            position: relative;
+            overflow: hidden;
+            margin: 15px 3px 5px !important;
+        }
+
+        .swal-button--confirm:hover {
+            background: #fc4349 !important;
+        }
+
         .networkStyling {
             font-family: "Times New Roman", Times, serif !important;
         }
