--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
             border-radius: 6px !important;
         }
 
+        .dropdown-share-content.bio {
+            top: 45px !important;
+        }
+
         img.img-responsive.v-frame {
             height: 85% !important;
+        }
+
+        .img.img-responsive.video-c {
+            width: 100% !important;
         }
 
         .swal-button--confirm {
