--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             background: #fc4349 !important;
         }
 
-        .networkStyling {
+        /*.networkStyling {
             font-family: "Times New Roman", Times, serif !important;
-        }
+        }*/
 
         .sdk-select {
             height: 34px;
