--- a/index.html
+++ b/index.html
@@ -330,7 +330,17 @@
             border-radius: 50% !important;
             position: relative;
             overflow: hidden;
+            top: 100px;
         }
+
+        .user-box img.profile-ring3 {
+            width: 50%;
+            position: absolute;
+            left: 25%;
+            top: 90px;
+        }
+
+
 
         @media (min-width: 992px) and (max-width: 1200px) {
             .__circular1 {
@@ -341,6 +351,13 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0px 0px !important;
+            }
+
+            .user-box img.profile-ring3 {
+                width: 50%;
+                position: absolute;
+                left: 25%;
+                top: 100px;
             }
         }
 
@@ -359,7 +376,15 @@
                 overflow: hidden;
                 margin: 0px 0px !important;
             }
+
+            .user-box img.profile-ring3 {
+                width: 50%;
+                position: absolute;
+                left: 25%;
+                top: 90px;
+            }
         }
+        
 
         @media (min-width: 605px) and (max-width: 768px) {
             .__circular1 {
@@ -370,6 +395,13 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0px 0px !important;
+            }
+
+            .user-box img.profile-ring3 {
+                width: 50%;
+                position: absolute;
+                left: 25%;
+                top: 100px;
             }
         }
 
@@ -382,6 +414,13 @@
                 position: relative;
                 overflow: hidden;
                 margin: -10px 5px !important;
+            }
+
+            .user-box img.profile-ring3 {
+                width: 40%;
+                position: absolute;
+                left: 30%;
+                top: 93px;
             }
 
             .__circular1 {
