--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             border-radius: 6px !important;
         }
 
+        .heading-areaz h1{
+            font-size: 40px !important;
+        }
+
         .dropdown-share-content.bio {
             top: 45px !important;
         }
