--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
     <link rel="stylesheet" href="/client/assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/client/assets/css/simpleLightbox.min.css">
     <link rel="stylesheet" href="/client/assets/css/easy-responsive-tabs.css">
-    
-
-    <link rel="stylesheet" href="/client/assets/css/instagram.css">
     <!--Template-->
 
 </head>
@@ -488,7 +485,7 @@
     <script src="/node_modules/redux-thunk/dist/redux-thunk.min.js"></script>
     <script src="/node_modules/lodash/lodash.min.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <!--<script src="/client/assets/js/jquery-3.3.1.min.js"></script>-->
+    <script src="/client/assets/js/jquery-3.3.1.min.js"></script>
 
     <script id="stripe-js" src="https://js.stripe.com/v3/" async></script>
 
