--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>React App</title>
+    <title>OC HIT</title>
 
     <!--Template-->
 
