--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
 <body>
     <style>
+        .sessionS{
+            height: 215px !important;
+        }
         .textArea {
             color: #000;
             font-size: 15px;
