--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="/client/assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/client/assets/css/simpleLightbox.min.css">
     <link rel="stylesheet" href="/client/assets/css/easy-responsive-tabs.css">
+    <link rel="stylesheet" href="/client/assets/css/textAcct.css">
+
     <!--Template-->
 
 </head>
