--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
 
 <body>
     <style>
-        .sessionS{
+        .inst2 {
+            width: 80px !important
+        }
+
+        .profile-ring4 {
+            width: 80px !important;
+            margin-top: -80px !important;
+            margin-left: -80px !important;
+            position: relative;
+        }
+
+
+        .profile-ring3 {
+            width: 38%;
+            margin: -70px auto !important;
+        }
+
+        .sessionS {
             height: 215px !important;
         }
+
         .textArea {
             color: #000;
             font-size: 15px;
@@ -364,6 +382,30 @@
             top: 90px;
         }
 
+        .__circular9 {
+            display: inline-block;
+            /* width: auto; */
+            height: 70px;
+            border-radius: 50%;
+            position: relative;
+            overflow: hidden;
+            margin: -60px auto !important;
+        }
+
+        @media (min-width: 410px) and (max-width: 1200px) {
+            .profile-ring3 {
+                width: 30%;
+                margin: -70px auto !important;
+            }  
+
+            .profile-ring4 {
+                width: 80px !important;
+                margin-top: -80px !important;
+                margin-left: -80px !important;
+                position: relative;
+            }          
+        }
+
 
 
         @media (min-width: 992px) and (max-width: 1200px) {
@@ -375,6 +417,18 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0px 0px !important;
+            }
+
+
+
+            .__circular9 {
+                display: inline-block;
+                /* width: auto; */
+                height: 65px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: -68px auto !important;
             }
 
             .user-box img.profile-ring3 {
@@ -401,6 +455,28 @@
                 margin: 0px 0px !important;
             }
 
+            .profile-ring3 {
+                width: 34%;
+                margin: -70px auto !important;
+            }
+
+            .profile-ring4 {
+                width: 80px !important;
+                margin-top: -120px !important;
+                margin-left: -80px !important;
+                position: relative;
+            }
+
+            .__circular9 {
+                display: inline-block;
+                /* width: auto; */
+                height: 65px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: -68px auto !important;
+            }
+
             .user-box img.profile-ring3 {
                 width: 50%;
                 position: absolute;
@@ -419,6 +495,17 @@
                 position: relative;
                 overflow: hidden;
                 margin: 0px 0px !important;
+            }
+
+
+            .__circular9 {
+                display: inline-block;
+                /* width: auto; */
+                height: 65px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: -68px auto !important;
             }
 
             .user-box img.profile-ring3 {
@@ -440,11 +527,33 @@
                 margin: -10px 5px !important;
             }
 
+            .profile-ring4 {
+                width: 80px !important;
+                margin-top: -130px !important;
+                margin-left: -80px !important;
+                position: relative;
+            }
+
             .user-box img.profile-ring3 {
                 width: 40%;
                 position: absolute;
                 left: 30%;
                 top: 93px;
+            }
+
+            .profile-ring3 {
+                width: 27%;
+                margin: -70px auto !important;
+            }
+
+            .__circular9 {
+                display: inline-block;
+                /* width: auto; */
+                height: 65px;
+                border-radius: 50%;
+                position: relative;
+                overflow: hidden;
+                margin: -68px auto !important;
             }
 
             .__circular1 {
