--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
 <body>
     <style>
+        .pf5 {
+            width: 55% !important;
+        }
+
         .inst2 {
             width: 80px !important
         }
@@ -396,14 +400,19 @@
             .profile-ring5 {
                 width: 30%;
                 margin: -70px auto !important;
-            }  
+            }
 
             .profile-ring4 {
                 width: 80px !important;
                 margin-top: -80px !important;
                 margin-left: -80px !important;
                 position: relative;
-            }          
+            }
+
+            .pf5 {
+                margin-bottom: 5% !important;
+                width: 39% !important;
+            }
         }
 
 
@@ -444,6 +453,8 @@
             cursor: default;
         }
 
+
+
         @media (min-width: 1205px) and (max-width: 1360px) {
             .__circular1 {
                 display: inline-block;
@@ -454,6 +465,8 @@
                 overflow: hidden;
                 margin: 0px 0px !important;
             }
+
+
 
             .profile-ring5 {
                 width: 34%;
@@ -498,6 +511,8 @@
             }
 
 
+
+
             .__circular9 {
                 display: inline-block;
                 /* width: auto; */
@@ -527,9 +542,13 @@
                 margin: -10px 5px !important;
             }
 
+            .pf5 {
+            width: 45% !important;
+        }
+
             .profile-ring4 {
                 width: 80px !important;
-                margin-top: -130px !important;
+                margin-top: -110px !important;
                 margin-left: -80px !important;
                 position: relative;
             }
@@ -606,6 +625,10 @@
         .StripeElement {
             width: 100%;
             padding: 11px 15px 11px 0;
+        }
+
+        .pf5 {
+            margin-bottom: 5% !important;
         }
     </style>
     <script src="/node_modules/react/umd/react.production.min.js"></script>
